--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,36 @@
         .navbar-nav .nav-link:hover {
             color: #007bff;
         }
+
+        /* CSS for smaller screens (e.g., phones) */
+        @media (max-width: 768px) {
+            /* Adjust circular image size */
+            .col-md-6 img {
+                max-width: 100%;
+                height: auto;
+                margin: 0 auto;
+            }
+
+            /* Adjust text styles */
+            .col-md-6 {
+                text-align: center;
+            }
+
+            /* Adjust font size for headings */
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            /* Center the CTA button */
+            .cta-button {
+                display: block;
+                margin: 10px auto;
+            }
+        }
     </style>
 </head>
 
@@ -68,18 +98,20 @@
     <section id="body" style="background-image: url('assets/white.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; text-align: center; padding: 20px 0;">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <img src="assets/bank9.jpg" alt="Circular Image" style="width: 400px; height: 400px; border-radius: 50%; background-color: #fff; padding: 10px;">
+                <div class="col-md-6 col-sm-12">
+                    <!-- Circular Image -->
+                    <img src="assets/bank9.jpg" alt="Circular Image" style="width: 100%; max-width: 400px; height: auto; border-radius: 50%; background-color: #fff; padding: 10px;">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
+                    <!-- Text Content -->
                     <br>
                     <h1 style="font-size: 2.5rem; color: #fff;">Welcome to Aayush Bank</h1>
                     <p style="font-size: 1.5rem; color: #fff;">
-                        <br>
                         A trusted financial institution, Aayush Bank, is dedicated to streamlining your financial experience. Offering a variety of personal and business financial solutions, we empower individuals and enterprises to effortlessly manage their finances. Discover a reliable partner in Aayush Bank, created by Aayush Sharma, for all your financial needs.
-                        <br>
-                        <br>
-                        <a href="#services" class="cta-button" style="background-color: #007bff; color: #fff; padding: 5px 20px; text-decoration: none; border-radius: 5px;">Explore Our Services</a>
+                    </p>
+                    <!-- CTA Button -->
+                    <br><br>
+                    <a href="#services" class="cta-button" style="background-color: #007bff; color: #fff; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Explore Our Services</a>
                 </div>
             </div>
         </div>
