--- a/public/index1.html
+++ b/public/index1.html
@@ -12,6 +12,83 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <style>
+        /* Custom styles for the header */
+        .navbar {
+            background-color: #333;
+        }
+
+        .navbar-brand {
+            font-size: 24px;
+            color: #fff;
+            font-weight: bold;
+        }
+
+        .navbar-toggler-icon {
+            background-image: url('assets/icons8-menu-24.png');
+        }
+
+        .navbar-toggler:focus {
+            outline: none;
+        }
+
+        .navbar-nav .nav-item {
+            margin-left: 20px;
+        }
+
+        .navbar-nav .nav-link {
+            color: #fff;
+            font-weight: bold;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: #007bff;
+        }
+
+        /* CSS for smaller screens (e.g., phones) */
+        @media (max-width: 576px) {
+            /* Adjust circular image size */
+            .col-md-6 img {
+                max-width: 100%;
+                height: auto;
+                margin: 0 auto;
+            }
+
+            /* Adjust text styles */
+            .col-md-6 {
+                text-align: center;
+            }
+
+            /* Adjust font size for headings */
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            /* Center the CTA button */
+            .cta-button {
+                display: block;
+                margin: 10px auto;
+                padding: 10px 20px;
+                font-size: 1rem;
+            }
+        }
+
+        /* Additional media query for slightly larger screens */
+        @media (min-width: 577px) and (max-width: 768px) {
+            /* Adjust font size for headings */
+            h1 {
+                font-size: 2.25rem;
+            }
+
+            p {
+                font-size: 1.25rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
