--- a/public/index.html
+++ b/public/index.html
@@ -61,13 +61,13 @@
                 text-align: center;
             }
 
-            /* Adjust font size for headings */
+            /* Adjust font size for headings and paragraphs */
             h1 {
-                font-size: 2rem; /* Reduce font size for smaller screens */
+                font-size: 1.5rem;
             }
 
             p {
-                font-size: 1rem; /* Reduce font size for smaller screens */
+                font-size: 1rem;
             }
 
             /* Center the CTA button */
@@ -76,17 +76,14 @@
                 margin: 10px auto;
             }
 
-            /* Reduce padding for body section */
+            /* Adjust padding for body section */
             #body {
                 padding: 20px 0;
             }
-        }
 
-        /* Additional CSS for mobile responsiveness */
-        @media (max-width: 576px) {
-            /* Further reduce font size for headings */
-            h1 {
-                font-size: 1.5rem;
+            /* Adjust padding for description textarea */
+            #description {
+                padding: 10px;
             }
         }
     </style>
