--- a/public/index.html
+++ b/public/index.html
@@ -61,13 +61,13 @@
                 text-align: center;
             }
 
-            /* Adjust font size for headings and paragraphs */
+            /* Adjust font size for headings */
             h1 {
-                font-size: 1.5rem;
+                font-size: 2rem; /* Reduce font size for smaller screens */
             }
 
             p {
-                font-size: 1rem;
+                font-size: 1rem; /* Reduce font size for smaller screens */
             }
 
             /* Center the CTA button */
@@ -76,12 +76,20 @@
                 margin: 10px auto;
             }
 
-            /* Adjust padding for body section */
+            /* Reduce padding for body section */
             #body {
                 padding: 20px 0;
             }
+        }
 
-            /* Adjust padding for description textarea */
+        /* Additional CSS for mobile responsiveness */
+        @media (max-width: 576px) {
+            /* Further reduce font size for headings */
+            h1 {
+                font-size: 1.5rem;
+            }
+
+            /* Add padding to the description textarea on mobile */
             #description {
                 padding: 10px;
             }
@@ -187,7 +195,7 @@
                     </div>
                     <div class="contact-item" style="margin-bottom: 20px;">
                         <img src="assets/email.png" alt="Email" style="width: 30px; height: 30px; margin-right: 10px;">
-                        <p style="font-size: 1rem; margin: 0;">Email: ayyush00sharma@gmail.com</p>
+                        <p style="font-size: 1rem; margin: 0;">Email:</p>
                     </div>
                     <div class="contact-item">
                         <img src="assets/contact.png" alt="Phone" style="width: 30px; height: 30px; margin-right: 10px;">
@@ -195,15 +203,21 @@
                     </div>
                 </div>
                 <form id="emailForm" style="margin-top: 30px;">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required><br><br>
+                    <!-- Add a container for the email input to control its width -->
+                    <div style="max-width: 400px; margin: 0 auto;">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" style="width: 100%;" required><br><br>
+                    </div>
 
                     <!-- Add a new input for the subject -->
                     <label for="subject">Subject:</label>
-                    <input type="text" id="subject" name="subject" required><br><br>
+                    <input type="text" id="subject" name="subject" style="width: 100%;" required><br><br>
 
-                    <label for="description">Description:</label><br>
-                    <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
+                    <!-- Add a container for the description textarea to control its width -->
+                    <div style="max-width: 400px; margin: 0 auto;">
+                        <label for="description">Description:</label><br>
+                        <textarea id="description" name="description" rows="4" cols="50" style="width: 100%;" required></textarea><br><br>
+                    </div>
 
                     <input type="submit" value="Submit">
                 </form>
